--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1045,6 +1045,9 @@
                 margin-left: 120%;
                 margin-top: -20px;
             }
+            .five {
+                margin-top: -66.9px;
+            }
             .five img {
                 width: 40.87px;
                 height: 40.87px;
