--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1029,6 +1029,9 @@
             .one {
                 margin-top: -20px;
             }
+            .two {
+                margin-top: -50px;
+            }
             .two img {
                 width: 16px;
                 height: 45px;
