--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1048,6 +1048,9 @@
                 margin-left: 125%;
                 margin-top: 91px;
             }
+            .four {
+                margin-top: 20px;
+            }
             .five img {
                 width: 40.87px;
                 height: 40.87px;
