--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1056,6 +1056,9 @@
                 height: 40.87px;
                 margin-top: -72px;
             }
+            .five {
+                margin-top: -20px;
+            }
             .six img {
                 width: 10.58px;
                 height: 40.66px;
