--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2410,3 +2410,240 @@
                 margin-left: 300px;
             }
         }
+         @media(max-width:320px) {
+            body {
+                background-position-x: center;
+            }
+            h1,
+            h3 {
+                font-size: 24px;
+                line-height: 29px;
+            }
+            h3 {
+                font-size: 9px;
+                line-height: 7px;
+            }
+            .header-logo h1 {
+                margin-top: 20%;
+                margin-left: 20%;
+                display: inline-block;
+            }
+            .header-defenition h3 {
+                margin-top: 0px;
+                margin-left: 70%;
+            }
+            .upper {
+                margin-left: 110px;
+                margin-top: -40px;
+            }
+            .upper img {
+                width: 40px;
+                height: 40px;
+            }
+            .one img {
+                margin-top: 0px;
+                width: 32px;
+                height: 20px;
+            }
+            .one {
+                margin-top: -20px;
+            }
+            .two {
+                margin-top: -10px;
+            }
+            .two img {
+                width: 16px;
+                height: 45px;
+                margin-top: -45px;
+            }
+            .three img {
+                width: 17px;
+                height: 17px;
+                margin-top: 0;
+            }
+            .four img {
+                width: 46px;
+                height: 73px;
+                margin-left: 125%;
+                margin-top: -81px;
+            }
+            .four {
+                margin-top: 20px;
+            }
+            .five img {
+                width: 40.87px;
+                height: 40.87px;
+                margin-top: -72px;
+            }
+            .five {
+                margin-top: -37px;
+            }
+            .six img {
+                width: 10.58px;
+                height: 40.66px;
+            }
+            .seven img {
+                width: 36px;
+                height: 9px;
+                margin-top: 0px;
+            }
+            .sun img {
+                width: 60px;
+                height: 60px;
+                margin-top: -60px;
+                margin-left: 110px;
+            }
+            .lines img {
+                width: 66px;
+                height: 66px;
+                margin-top: 263px;
+            }
+            .volcano {
+                margin-top: 0px;
+                width: 40px;
+                height: 60px;
+                margin-bottom: 0;
+            }
+            .volcano img {
+                width: 17px;
+                height: 20px;
+            }
+            .volcano-upper-left img {
+                width: 4.62px;
+                height: 0.07px;
+            }
+            .volcano-upper-right img {
+                width: 4.62px;
+                height: 0.07px;
+            }
+            .volcano-upper-center img {
+                width: 4px;
+                height: 0px;
+            }
+            .eight img {
+                width: 32.06px;
+                height: 31.06px;
+            }
+            .eleven img {
+                margin-top: -200px;
+                width: 11px;
+                height: 20px;
+            }
+            .twelve img {
+                margin-top: 0px;
+                margin-left: 320px;
+                width: 64px;
+                height: 26px;
+            }
+            .therteen img {
+                margin-top: -175px;
+                width: 45px;
+                height: 12px;
+            }
+            .fourteen img {
+                width: 18px;
+                height: 26px;
+                margin-left: 370px;
+            }
+            .fifteen img {
+                margin-top: -0px;
+                width: 12px;
+                height: 19px;
+            }
+            .sixteen img {
+                margin-left: 59%;
+                width: 2px;
+                height: 15px;
+            }
+            .outer {
+                width: 27px;
+                height: 43px;
+                margin-top: 80px;
+            }
+            .eighteen {
+                margin-top: -40px;
+                margin-left: -6px;
+            }
+            .eighteen img {
+                width: 14px;
+                height: 14px;
+            }
+            .nineteen img {
+                width: 57px;
+                height: 15px;
+                margin-left: 100px;
+            }
+            .twenty img {
+                margin-top: -80px;
+                width: 36px;
+                height: 24px;
+            }
+            .twentyone img {
+                margin-top: 0px;
+                width: 65.52px;
+                height: 53.79px;
+            }
+            .twentytwo {
+                margin-top: 0;
+            }
+            .twentytwo img {
+                margin-top: 0px;
+                margin-left: 30px;
+                width: 16px;
+                height: 17px;
+            }
+            .twentythree img {
+                width: 46px;
+                height: 45px;
+            }
+            .twentyfive img {
+                width: 103.43px;
+                height: 103.43px;
+                margin-top: 20px;
+                margin-left: 60px;
+            }
+            .twentysix {
+                margin-top: -80px;
+                margin-left: 60px;
+            }
+            .twentysix img {
+                margin-left: 25px;
+                width: 50.62px;
+                height: 50.62px;
+            }
+            .twentyseven img {
+                width: 49px;
+                height: 23px;
+                margin-left: 330px;
+                float: none;
+            }
+            .twentyeight img {
+                margin-top: -30px;
+                width: 3px;
+                height: 49px;
+            }
+            .twentynine {
+                margin-top: 0;
+            }
+            .twentynine img {
+                width: 34px;
+                height: 14px;
+                margin-top: 0px;
+            }
+            .thertyone img {
+                width: 108px;
+                height: 52px;
+                margin-top: 0px;
+            }
+            .thertytwo img {
+                margin-top: -150px;
+                width: 71px;
+                height: 91px;
+            }
+            .thertythree img {
+                width: 94.29px;
+                height: 94.29px;
+                margin-top: 0px;
+                margin-left: 300px;
+            }
+        }
