--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,7 +492,7 @@
         }
         
         .three img {
-            margin-top: 50px;
+            margin-top: 50%;
             margin-left: 63%;
             background: none;
         }
@@ -802,7 +802,7 @@
             font-family: 'Montserrat', sans-serif;
             font-style: normal;
             font-weight: 500;
-            font-size: 130px;
+            font-size: 120px;
             line-height: 158px;
             color: none;
             text-shadow: -0 -1px 1px #FFFFFF, 0 -1px 1px #FFFFFF, -0 1px 1px #FFFFFF, 0 1px 1px #FFFFFF, -1px -0 1px #FFFFFF, 1px -0 1px #FFFFFF, -1px 0 1px #FFFFFF, 1px 0 1px #FFFFFF, -1px -1px 1px #FFFFFF, 1px -1px 1px #FFFFFF, -1px 1px 1px #FFFFFF, 1px 1px 1px #FFFFFF, -1px -1px 1px #FFFFFF, 1px -1px 1px #FFFFFF, -1px 1px 1px #FFFFFF, 1px 1px 1px #FFFFFF;
@@ -814,7 +814,7 @@
             font-family: 'Montserrat', sans-serif;
             font-style: normal;
             font-weight: 900;
-            font-size: 22px;
+            font-size: 19px;
             line-height: 27px;
             z-index: 1;
             background: none;
@@ -837,7 +837,7 @@
         .header-logo h1 {
             margin-top: 5%;
             margin-left: 5%;
-            display: inline-block !important;
+            display: inline-block;
             -webkit-background-clip: text;
             -webkit-text-fill-color: #000;
             color: #000;
@@ -967,7 +967,7 @@
         }
         
         .volcano-upper-center img {
-            width: 2px;
+            width: 1px;
             background: none;
         }
         
@@ -1198,7 +1198,7 @@
             font-family: 'Montserrat', sans-serif;
             font-style: normal;
             font-weight: 500;
-            font-size: 130px;
+            font-size: 110px;
             line-height: 158px;
             color: none;
             text-shadow: -0 -1px 1px #FFFFFF, 0 -1px 1px #FFFFFF, -0 1px 1px #FFFFFF, 0 1px 1px #FFFFFF, -1px -0 1px #FFFFFF, 1px -0 1px #FFFFFF, -1px 0 1px #FFFFFF, 1px 0 1px #FFFFFF, -1px -1px 1px #FFFFFF, 1px -1px 1px #FFFFFF, -1px 1px 1px #FFFFFF, 1px 1px 1px #FFFFFF, -1px -1px 1px #FFFFFF, 1px -1px 1px #FFFFFF, -1px 1px 1px #FFFFFF, 1px 1px 1px #FFFFFF;
@@ -1586,10 +1586,10 @@
             h3 {
                 font-size: 110px;
                 line-height: 134px;
-                text-shadow: 0.7px solid #FFFFFF;
+                text-shadow: 0.5px solid #FFFFFF;
             }
             h3 {
-                font-size: 22px;
+                font-size: 16px;
                 line-height: 27px;
                 text-shadow: 0.5px solid #FFFFFF;
                 width: 380px;
@@ -1623,12 +1623,12 @@
                 height: 109.25px;
             }
             .six img {
-                width: 42.06px;
-                height: 161.64px;
+                width: 38px;
+                height: 155px;
             }
             .seven img {
-                width: 144px;
-                height: 36px;
+                width: 138px;
+                height: 33px;
             }
             .sun img {
                 width: 200px;
@@ -1636,8 +1636,8 @@
                 margin-left: 20px;
             }
             .lines img {
-                width: 176px;
-                height: 176px;
+                width: 150px;
+                height: 150px;
             }
             .volcano {
                 margin-top: -120px;
@@ -2494,8 +2494,8 @@
                 margin-left: 110px;
             }
             .lines img {
-                width: 66px;
-                height: 66px;
+                width: 36px;
+                height: 36px;
                 margin-top: 263px;
             }
             .volcano {
@@ -2505,19 +2505,19 @@
                 margin-bottom: 0;
             }
             .volcano img {
-                width: 17px;
-                height: 20px;
+                width: 13px;
+                height: 17px;
             }
             .volcano-upper-left img {
-                width: 4.62px;
+                width: 2px;
                 height: 0.07px;
             }
             .volcano-upper-right img {
-                width: 4.62px;
-                height: 0.07px;
+                width: 2px;
+                height: 0.05px;
             }
             .volcano-upper-center img {
-                width: 4px;
+                width: 2px;
                 height: 0px;
             }
             .eight img {
@@ -2641,8 +2641,8 @@
                 height: 91px;
             }
             .thertythree img {
-                width: 94.29px;
-                height: 94.29px;
+                width: 62px;
+                height: 62px;
                 margin-top: 0px;
                 margin-left: 300px;
             }
